[gd_scene load_steps=4 format=3 uid="uid://b7xj3qm5k8rwy"]

[ext_resource type="Script" uid="uid://7n6msicmnack" path="res://scripts/ui/network_ui.gd" id="1_login"]

[sub_resource type="LabelSettings" id="LabelSettings_login"]
font_size = 38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_login"]
bg_color = Color(0.3846647, 0.25553435, 0.16041034, 1)

[node name="LoginScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_login")

[node name="Login" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -64.0
offset_right = 91.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameNameLabel" type="Label" parent="Login"]
layout_mode = 2
text = "Multiplayer Game"
label_settings = SubResource("LabelSettings_login")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="Login"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Username"
max_length = 30

[node name="PasswordInput" type="LineEdit" parent="Login"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"
max_length = 256
secret = true

[node name="StayLoggedInCheckbox" type="CheckBox" parent="Login"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Stay logged in"
autowrap_mode = 2

[node name="LoginButton" type="Button" parent="Login"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Login"

[node name="ErrorLabel" type="Label" parent="Login"]
visible = false
layout_mode = 2
text = "Error!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
z_index = -2
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_login")

[connection signal="pressed" from="Login/LoginButton" to="." method="_on_login_button_pressed"]
